# tracseq2.0

./: .cursorrules  .dockerignore  .env  .env.example  .env.monitoring  .env_old  .gigaignore  .gitignore  AI_FEATURES_GUIDE.md  API_GATEWAY_ROUTING_FIX_SUCCESS.md  API_ROUTING_RESOLUTION.md  ASYNC_TASK_MANAGEMENT_FIX.md  BUILD_FIXES_SUMMARY.md  BUILD_SUCCESS_REPORT.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETE_MCP_DEPLOYMENT_GUIDE.md  CRITICAL_ISSUES_DIAGNOSIS_AND_SOLUTIONS.md  Cargo.toml  DATABASE_CONNECTIVITY_SOLUTION.md  DEADLOCK_FIX_SUMMARY.md  DEPENDENCY_INSTALLATION_SUCCESS.md  DEPLOYMENT_SUCCESS_REPORT.md  DISTRIBUTED_TRANSACTION_MANAGEMENT_IMPLEMENTATION.md  DOCKER_FRONTEND_INTEGRATION_SUCCESS.md  DOCKER_INTEGRATION_GUIDE.md  DOCKER_QUICK_START.md  Dockerfile  Dockerfile.alpine  Dockerfile.dev  Dockerfile.dev.windows  ENHANCED_STORAGE_SERVICE_COMPLETE_SUMMARY.md  ENHANCED_STORAGE_SERVICE_ERROR_FIXES.md  ENHANCED_STORAGE_SERVICE_PHASE1_COMPLETE.md  ENHANCED_STORAGE_SERVICE_PHASE1_COMPLETION.md  ENHANCED_STORAGE_SERVICE_PHASE3_COMPLETE.md  EVENT_DRIVEN_COMMUNICATION_IMPLEMENTATION.md  FASTMCP_MIGRATION_EXECUTION_SUMMARY.md  FINAL_VALIDATION_REPORT.md  FRONTEND_INTEGRATION_SUCCESS.md  (+163 more)
api_gateway/: API_GATEWAY_IMPLEMENTATION.md  Dockerfile  Dockerfile.enhanced  Dockerfile.monolith  Dockerfile.simple  README-gateway.md  README.md  docker-compose.minimal.yml  fastmcp_gateway.py  pyproject.toml  requirements.txt  start-api-gateway.sh  wait-for-services.sh
api_gateway/config/: README.md  gateway.env.example
auth_service/: AUTH_TEST_FIXES_SUMMARY.md  Cargo.toml  Cargo.toml.workspace  Dockerfile  PHASE_1_SUMMARY.md
auth_service/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  services.rs
auth_service/tests/: comprehensive_auth_test.rs  mod.rs  test_utils.rs
circuit-breaker-lib/: Cargo.toml
circuit-breaker-lib/src/: lib.rs
config-service/: Cargo.toml
enhanced_rag_service/: Dockerfile  ENHANCED_RAG_SERVICE_IMPLEMENTATION.md  README.md  docker-compose.yml  fastmcp_enhanced_rag_server.py  pyproject.toml  requirements.txt
enhanced_rag_service/alembic/: env.py
enhanced_rag_service/monitoring/: prometheus.yml
enhanced_storage_service/: Cargo.toml  Dockerfile  INTEGRATION_WITH_TRACSEQ.md  check_output.txt  deploy-local.ps1  docker-compose.local.yml
enhanced_storage_service/scripts/: init-db.sql
enhanced_storage_service/src/: analytics.rs  automation.rs  compliance.rs  config.rs  database.rs  digital_twin.rs  error.rs  iot.rs  lib.rs  main.rs  middleware.rs  mobile.rs  models.rs  services.rs
enhanced_storage_service/tests/: README.md  fixtures.rs  lib.rs  mod.rs  test_utils.rs
event_service/: Cargo.toml  Dockerfile  TEST_FIXES_SUMMARY.md  docker-compose-integrated.yml  docker-compose.yml
event_service/examples/: integration_example.rs
event_service/src/: lib.rs  main.rs  models.rs
event_service/tests/: mod.rs  test_utils.rs
lab_manager/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine-light  Dockerfile.dev  Dockerfile.dev.windows  env.development  env.production  env.shibboleth.example  package-lock.json  package.json
lab_manager/docs/: CI_CD_SUMMARY.md  MODULAR_SUMMARY.md  RAG_CHATBOT_SETUP.md  SYSTEM_OVERVIEW.md
lab_manager/examples/: modular_demo.rs
lab_manager/frontend/: .gitignore  TESTING.md  jest.config.js  package-lock.json  package.json  vite.config.js  vite.config.ts
lab_manager/migrations/: 20240320000003_add_performance_indexes.sql  20240320000004_create_security_audit_log.sql  20240320000005_create_user_system.sql  20240320000009_create_spreadsheet_system.sql  20240320000010_fix_spreadsheet_schema.sql
lab_manager/scripts/: create_admin.sh  run.sh
lab_manager/src/: lib.rs  main.rs
lab_submission_rag/: Dockerfile  Dockerfile.simple  FINAL_ENHANCEMENT_SUMMARY.md  LIGHTWEIGHT_SUMMARY.md  README.md  README_SIMPLE.md  __init__.py  aligned_rag_model.py  analyze_lab_schema.py  check_connection_status.py  config.py  connection_test.txt  custom_lab_categories.py  database.py  docker-compose-simple.yml  docker-compose.yml  example_enhanced_usage.py  example_usage.py  fastmcp_rag_server.py  fixed_improved_rag.py  frontend_api_bridge.py  improved_lab_rag.py  lab_automation_workflows.py  mlops_example.py  mlops_requirements.txt  pyproject.toml  rag_orchestrator.py  rag_orchestrator_v2.py  requirements.txt  run_simple_rag.py  setup_check.py  setup_llama.py  setup_simple.py  simple_frontend_bridge.py  simple_frontend_bridge_fixed.py  simple_frontend_bridge_working.py  simple_lab_rag.py  simple_lab_rag_DEPRECATED.py  simple_lab_rag_refactored.py  simple_rag_standalone.py  (+7 more)
lab_submission_rag/api/: main.py
lab_submission_rag/core/: __init__.py  container.py  exceptions.py  factories.py  interfaces.py  services.py
lab_submission_rag/mlops/: __init__.py  ab_testing.py  config.py  continuous_learning.py  data_pipeline.py  deployment_manager.py  experiment_tracker.py  model_registry.py
lab_submission_rag/models/: __init__.py  database.py  rag_models.py  submission.py
lab_submission_rag/rag/: __init__.py  document_processor.py  enhanced_llm_interface.py  llm_interface.py  vector_store.py
lab_submission_rag/repositories/: __init__.py  submission_repository.py
lab_submission_rag/scripts/: __init__.py  init_database.py  integrate_lab_manager.py
lab_submission_rag/simple/: __init__.py  document_processor.py  llm_interface.py  models.py
lab_submission_rag/tests/: __init__.py  conftest.py  run_tests.py  utils.py
library_details_service/: Cargo.toml
library_details_service/src/: database.rs  error.rs  main.rs  (+2 more)
lims-core/: Cargo.toml  TEST_SUMMARY.md
notification_service/: Cargo.toml  Dockerfile
sample_service/: Cargo.toml  Dockerfile
sequencing_service/: Cargo.toml  Dockerfile  README.md
spreadsheet_versioning_service/: Cargo.toml  README.md
template_service/: Cargo-simple.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
test-helpers/: Cargo.toml
transaction_service/: Cargo.toml  DATABASE_PERSISTENCE_IMPLEMENTATION.md  Dockerfile  README.md  docker-compose.yml
(+1933 files in other folders)
