[workspace]
members = [
    "lims-core/lab_manager",
    "lims-core/auth_service",
    "lims-core/sample_service",
    "lims-core/sequencing_service",
    "lims-core/notification_service",
    "lims-core/template_service",
    "lims-core/transaction_service",
    "lims-core/enhanced_storage_service",
    "lims-core/event_service",
    "lims-core/spreadsheet_versioning_service",
    "lims-core/barcode_service",
    # Phase 2 Services
    "lims-core/qaqc_service",
    "lims-core/library_details_service",
    "temp_auth_test",
    # Phase 10 Services - Next-Generation Intelligence
    "lims-core/cognitive_assistant_service",
    # Test utilities
    "test-helpers",
    "lims-core/dashboard_service", 
    "lims-core/reports_service"
]
exclude = [
    "circuit-breaker-lib",
    "config-service"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/poglesbyg/tracseq2.0"

[workspace.dependencies]
# Shared dependencies for all workspace members
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Web framework dependencies
axum = { version = "0.7", features = ["macros"] }
axum-test = "14.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Authentication and SSO
jsonwebtoken = "9.2"
saml2 = "0.3"
quick-xml = "0.31"
bcrypt = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Async utilities
futures = "0.3"

# Version constraints for problematic dependencies
base64ct = "1.6"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Add resolver configuration for better module resolution
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

# Profile configurations for all workspace members
[profile.release]
opt-level = "s"          # Optimize for size
lto = true               # Enable link-time optimization
codegen-units = 1        # Reduce parallel code generation for smaller binaries
panic = "abort"          # Reduce binary size by removing unwinding code
strip = true             # Strip debug symbols

# Additional optimization profile for ultra-small builds
[profile.release-small]
inherits = "release"
opt-level = "z"          # Optimize aggressively for size
lto = "fat"              # Full LTO for maximum size reduction
