[workspace]
resolver = "2"
members = [
    "lab_manager"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/poglesbyg/tracseq2.0"

[workspace.dependencies]
# Shared dependencies for all workspace members
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Add resolver configuration for better module resolution
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

# Size and memory optimizations for release builds
[profile.release]
opt-level = "s"          # Optimize for size
lto = true               # Enable link-time optimization
codegen-units = 1        # Reduce parallel code generation for smaller binaries
panic = "abort"          # Reduce binary size by removing unwinding code
strip = true             # Strip debug symbols

# Additional optimization profile for ultra-small builds
[profile.release-small]
inherits = "release"
opt-level = "z"          # Optimize aggressively for size
lto = "fat"              # Full LTO for maximum size reduction 
