[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracseq-api-gateway"
version = "0.1.0"
description = "TracSeq 2.0 API Gateway - Intelligent routing and management for microservices"
readme = "README-gateway.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["api-gateway", "microservices", "routing", "tracseq", "laboratory"]
authors = [
  { name = "TracSeq Team", email = "dev@tracseq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  # Web Framework & API
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pydantic>=2.4.0",
  
  # HTTP Client & Proxy
  "httpx>=0.25.0",
  "requests>=2.31.0",
  
  # Configuration & Environment
  "python-dotenv>=1.0.0",
  
  # Utilities
  "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
  "black>=23.10.0",
  "ruff>=0.1.5",
  "mypy>=1.7.0",
  "pre-commit>=3.5.0",
  "ipython>=8.16.0",
]

monitoring = [
  # Advanced monitoring
  "grafana-api>=1.0.3",
  "elasticsearch>=8.10.0",
  "kibana-api>=0.1.0",
]

enterprise = [
  # Enterprise features
  "cryptography>=41.0.7",
  "boto3>=1.29.0",
  "azure-identity>=1.15.0",
  "google-cloud-storage>=2.10.0",
]

[project.urls]
Documentation = "https://docs.tracseq.com/api-gateway"
Issues = "https://github.com/tracseq/api-gateway/issues"
Source = "https://github.com/tracseq/api-gateway"

[project.scripts]
tracseq-gateway = "api_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]

[tool.hatch.version]
path = "src/api_gateway/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov-html = [
  "- coverage combine", 
  "coverage html",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/api_gateway tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py39"]
line-length = 88
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
  "A",
  "ARG", 
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "B027",
  "FBT003",
  "S105", "S106", "S107",
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["api_gateway"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["api_gateway", "tests"]
branch = true
parallel = true
omit = [
  "src/api_gateway/__about__.py",
]

[tool.coverage.paths]
api_gateway = ["src/api_gateway", "*/tracseq-api-gateway/src/api_gateway"]
tests = ["tests", "*/tracseq-api-gateway/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
] 
