[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"
authors = ["Lab Management Team"]
description = "Standalone authentication service for laboratory management system"

[dependencies]
# Web framework
axum = "0.7.5"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
dotenvy = "0.15"

# HTTP client (for health checks, etc.)
reqwest = { version = "0.11", features = ["json"] }

# Metrics and observability
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "auth_service"
path = "src/main.rs" 
