[package]
name = "tracseq-config-service"
version = "0.1.0"
edition = "2024"
authors = ["TracSeq Team"]
description = "Centralized configuration management service for TracSeq microservices"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "query", "macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional database support (for persistent storage)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }
redis = { version = "0.24", optional = true }

# Configuration
config = "0.14"
envy = "0.4"

# Encryption (for sensitive config values)
ring = "0.17"
base64 = "0.21"

# Async utilities
futures = "0.3"

[features]
default = []
postgres = ["sqlx"]
redis-support = ["redis"]
encryption = []

[dev-dependencies]
tower-test = "0.4"
hyper = "1.0"
http-body-util = "0.1"