[package]
name = "event_service"
version = "0.1.0"
edition = "2024"
authors = ["TracSeq Team <dev@tracseq.com>"]
description = "Event-driven communication service for TracSeq 2.0 microservices ecosystem"
license = "MIT"
keywords = ["event-driven", "microservices", "redis-streams", "async", "laboratory"]

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Redis for Event Streaming
redis = { version = "0.24", features = ["streams", "connection-manager", "tokio-comp"] }
deadpool-redis = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Database (for event persistence and replay)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client (for service communication)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Message validation and schema
jsonschema = "0.17"
validator = { version = "0.18", features = ["derive"] }

# Retry and resilience
tokio-retry = "0.3"

# Regular expressions for pattern matching
regex = "1.10"

# Monitoring and health checks
# health_check = "0.1"  # Commented out - not needed for basic health endpoints

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"

[features]
default = ["redis-streams"]
redis-streams = []
rabbitmq = ["lapin"]
kafka = ["rdkafka"]

[dependencies.lapin]
version = "2.3"
optional = true

[dependencies.rdkafka]
version = "0.36"
optional = true

[lib]
name = "event_service"
path = "src/lib.rs"

[[bin]]
name = "event_service"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 
