[package]
name = "lab_manager"
version.workspace = true
edition.workspace = true
description = "Laboratory Sample Management System for biological sample processing, storage tracking, and sequencing workflows"
license.workspace = true
repository.workspace = true
keywords = ["laboratory", "sample-management", "sequencing", "storage", "biotech"]
categories = ["science", "database"]
default-run = "lab_manager"

[lib]
name = "lab_manager"
path = "src/lib.rs"

# Size and memory optimizations for release builds
[profile.release]
opt-level = "s"          # Optimize for size
lto = true               # Enable link-time optimization
codegen-units = 1        # Reduce parallel code generation for smaller binaries
panic = "abort"          # Reduce binary size by removing unwinding code
strip = true             # Strip debug symbols

# Additional optimization profile for ultra-small builds
[profile.release-small]
inherits = "release"
opt-level = "z"          # Optimize aggressively for size
lto = "fat"              # Full LTO for maximum size reduction

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Project-specific dependencies
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "macros", "migrate"] }
axum = { version = "0.7.9", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
calamine = "0.22"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
fastrand = "2.0"
rand = "0.9.1"

# Authentication and Security Dependencies
jsonwebtoken = "9.2"
argon2 = "0.5"
validator = { version = "0.18", features = ["derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
headers = "0.4"

[dev-dependencies]
axum-test = "15.0"
tokio-test = "0.4"
